--- a/Blog-backend/package.json
+++ b/Blog-backend/package.json
@@ -8,7 +8,8 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
-    "test-api": "npm test -- tests/blog_api.test.js"
+    "test-api-blog": "npm test -- tests/blog_api.test.js",
+    "test-api-user": "npm test -- tests/user.api.test.js"
   },
   "keywords": [],
   "author": "",
